# Genesis

./: CMakeLists.txt  README.md  io.asm  test.gn
src/: arena.hpp  generation.hpp  geny  main  main.cpp  parser.hpp  tokenization.hpp
