//variable declaration
let x = 11;
let y = (x - 2 * 3) / 2;
let result = 0;

//Single line comment
/* Multi line comment */

//if else
if (x == 1 + 2*5) {
    result = 1 + 2 * 10;
}elif (x >= 10){
    result = 11;
}else{
    result = 3;
}

let n = 0;

input(n);

let i = 1;
while(i <= n){
    print(i);
    i = i + 1;
}

exit(result);

